third_party/move/move-compiler-v2/tests/reference-safety/v1-borrow-tests/mutable_borrow_invalid.exp

Diagnostics:
error: cannot write value since it is borrowed
   ┌─ tests/reference-safety/v1-borrow-tests/mutable_borrow_invalid.move:9:9
   │
 6 │         let x = if (cond) &mut root.f else &mut root.g;
   │                           ----------- previously mutably borrowed here
   ·
 9 │         root.f = 1;
   │         ^^^^^^^^^^ write attempted here
10 │         *x;
   │         -- conflicting reference `x` used here

error: cannot transfer mutable value since it is borrowed
   ┌─ tests/reference-safety/v1-borrow-tests/mutable_borrow_invalid.move:17:9
   │
14 │         let x = if (cond) &mut root.f else &mut root.g;
   │                           ----------- previously mutably borrowed here
   ·
17 │         foo(x, &mut root.f);
   │         ^^^^^^^^^^^^^^^^^^^ transfer attempted here
